# PDF-Convertor

./: .gitignore  Dockerfile  README.md  factory.py  main.py  pyproject.toml  requirements.txt
core/: entities.py  interfaces.py
docs/: common_mistakes.md  self_assessment.html
generators/: jinja_renderer.py  pdf_overlay_generator.py
generators/templates/: type_b.html.j2
output_files_example/: attendance_report_type_a_20251015_193518.html  attendance_report_type_a_20251015_193518.xlsx  attendance_report_type_a_20251015_193529.html  attendance_report_type_a_20251015_193529.xlsx  attendance_report_type_b_20251015_191931.html  attendance_report_type_b_20251015_191931.xlsx  attendance_report_type_b_20251015_192750.html  attendance_report_type_b_20251015_192750.xlsx  extracted_text.txt
services/: calculation_service.py  parsing_service.py  variation_service.py
src/attendance_report/: __init__.py  __main__.py  app.py  cli.py
src/attendance_report/domain/: __init__.py  exceptions.py  interfaces.py  models.py
src/attendance_report/generation/: html_renderer.py  pdf_renderer.py  render.py
src/attendance_report/generation/templates/: type_a.html.j2  type_b.html.j2
src/attendance_report/parsing/: __init__.py  base_parser.py  classifier.py  ocr.py  type_a_parser.py  type_b_parser.py
src/attendance_report/transformation/: __init__.py  calculation_service.py  transformation_service.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: test_layout.py  test_parsers.py  test_transformation.py
